# Compliance-Screenshot-Archiver

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.capture  Dockerfile.capture.production  PLANNING.md  README.md  TASK.md  TESTING_GUIDE.md  deployment-verification-report.md  development-phase-report.md  docker-compose.yml  mypy.ini  pyproject.toml  test_imports.py  test_lambda_import.py  test_placeholder.py  test_report_20250821_215012.json
.claude/: CLAUDE.md  servers.json
.claude/PRP/: CSA_MVP_COMPLETE.md  INITIAL.md
.claude/agents/: aws-architect.md  ddb-modeller.md  docs-manager.md  playwright-capture-specialist.md  security-auditor.md  validation-gates.md
.claude/commands/: execute-prp.md  generate-prp.md  primer.md
.claude/hooks/: post-tool-validate.sh
.githooks/: post-commit
.github/:  pull_request_template.md  pull_request_template.md
.github/workflows/: ci.yml  doc-check.yml
.serena/: project.yml
.serena/memories/: archon_mcp_integration_test_results.md  completion_checklist.md  compliance_screenshot_archiver_overview.md  csa_architecture_patterns.md  csa_current_tasks_priorities.md  csa_deployment_guide.md  mcp_tools_test.md  project_overview.md  suggested_commands.md  tech_stack_and_conventions.md
app/: lambda_handler.py
app/api/: __init__.py  router.py
app/auth/: deps.py
app/capture_engine/: __init__.py  engine.py  mock_engine.py  processor.py  simple_engine.py
app/core/: config.py  errors.py  logging.py
app/domain/: models.py
app/scheduling/: __init__.py  workers.py
app/storage/: s3.py  (+2 more)
backend/: Dockerfile.api  Dockerfile.capture  README.md  deploy-capture.sh  pyproject.toml  setup_tables.py
backend/app/: __init__.py  api_handler.py  lambda_handler.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: auth.py  captures.py  captures_sync.py  health.py  schedules.py
backend/app/auth/: deps.py
backend/app/capture_engine/: engine.py  processor.py
backend/app/domain/: models.py
backend/app/scheduling/: scheduler.py
backend/app/storage/: dynamo.py  s3.py
backend/docker/: Dockerfile.playwright
backend/infra/: .terraform.tfstate.lock.info  Makefile  README.md  api_gateway.tf  cloudtrail.tf  eventbridge_sqs_lambda.tf  iam.tf  kms.tf  lambda.tf  monitoring.tf  providers.tf  s3_artifacts.tf  variables.tf
backend/scripts/: auto_update_tasks.py  dev-start.sh  localstack-init.sh  task_completion_rules.yaml  test
backend/tests/: test_auth.py  test_capture_engine.py  test_storage_dynamo.py
deployment/: deployment-summary.md
docker/: Dockerfile.dev
docs/: CSA-Design.md  CSA-Spec.md  Future-Prospects.md  authentication.md  manifest.yaml
frontend/: .env.example  README.md  package-lock.json  package.json  tsconfig.app.json
infra/: .terraform.tfstate.lock.info  README.md  cognito.tf  dynamodb.tf  kms.tf  lambda.tf  outputs.tf  s3_artifacts.tf  secrets.tf  terraform.tfvars.example  tfplan-fixed  variables.tf
scripts/: deploy.sh  init-postgres.sql  setup_git_hooks.sh  test_all.py  test_auth.py
tests/: conftest.py  test_api_captures.py  test_integration_auth.py  test_storage_s3.py
(+21 files in other folders)
