[project]
name = "compliance-screenshot-archiver"
version = "0.1.0"
description = "Scheduled and on-demand webpage captures with verifiable artifacts."
authors = [{name = "CSA Team", email = "team@example.com"}]
# readme = "README.md"  # No README in backend directory
requires-python = ">=3.12"
license = {text = "MIT"}
keywords = ["compliance", "screenshot", "archiver", "audit", "evidence"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.111.0",
    "pydantic>=2.8.2",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.1",
    "boto3>=1.34.0",
    "mangum>=0.17.0",
    "httpx>=0.27.0",
    "playwright>=1.40.0",
    "ulid-py>=1.1.0",
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.3.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.8",
    "moto>=5.0.10",
    "types-requests",
    "bandit>=1.7.9",
    "pre-commit>=3.0.0",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
lint.select = ["E","F","I","UP","B","S","W","PL","N"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLR2004", "S106", "S105", "F841"]  # Allow assert statements, magic values, test credentials, and unused variables in tests
"scripts/*" = ["S603", "S607", "S105", "PLR2004", "UP036"]  # Allow subprocess calls, test credentials, magic values, and version checks in scripts
"app/auth/deps.py" = ["B008"]  # Allow Depends() in function defaults for FastAPI dependencies

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["tests/"]
files = ["app/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --disable-warnings"
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
